fix broken css

--- a/style.scss
+++ b/style.scss
@@ -674,7 +674,7 @@ a:hover {
 
 #home-content h2 p {
 	font-family: $futura;
-	color: #ffffff
+	color: #ffffff;
 	margin-top: 40px;
 	margin-bottom: 20px;
 	padding: 0;
